<resources>
    <string name="app_name">PreSchoolers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nav_title">Admin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="logout_note">Are you really wan\'t to Logout from App?</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="register">Register</string>
    <string name="lg_email">   E-Mail</string>
    <string name="lg_pass">    Password</string>
    <string name="lg_login">Sign In</string>
    <string name="lg_forgotpass">Forgot Password?</string>
    <string name="lg_signup">Sign Up</string>

    <string name="signup_name">Enter Your Name</string>
    <string name="signup_city">Enter Your City</string>
    <string name="signup_email">Enter Your Email</string>
    <string name="signup_mono">Enter Your Mobile Number</string>
    <string name="signup_password">Enter Your Password</string>
    <string name="signup_conpass">Enter Your ConfirmPassword</string>

    <string name="student_firstname">First Name</string>
    <string name="student_lastname">Last Name</string>
    <string name="student_guardian1">Guardian # 1</string>
    <string name="student_guardian2">Guardian # 2</string>
    <string name="student_guardianname">Name</string>
    <string name="student_guardianmail">Mail id</string>
    <string name="student_guardianphonenumber">Phone Number</string>
    <string name="student_medications">Medications</string>
    <string name="student_allergies">Allergies</string>
    <string name="student_teacherinfo">Teacher info</string>


    <string name="admin">Admin</string>
    <string-array name="nav_drawer_labels">
        <item>@string/admin</item>
    </string-array>
    <string name="title_activity_search_fragment">SearchFragment</string>
    <string name="open">drawer_open</string>
    <string name="close">drawer_close</string>
    <string name="addschool">Add School</string>
    <string name="somethingwentwrong">Something went wrong</string>
    <string name="collegename">College name</string>
    <string name="collegeweb">Website</string>


</resources>
