<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:float="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bgcolor"
            android:orientation="vertical"
            android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_header"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorAccent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="Signup"
                    android:textColor="@color/white"
                    android:textSize="25dp" />
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@color/su_background_color">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ivProfileImage"
                    android:layout_width="match_parent"
                    android:foregroundGravity="center"
                    android:layout_height="110dp"
                    android:src="@drawable/ic_user"
                    android:layout_centerHorizontal="true"
                    app:civ_border_width="4dp"
                    app:civ_border_color="#FFFFFF"/>

                  </RelativeLayout>

            <EditText
                android:id="@+id/etName_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_name"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="text"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/etCity_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_city"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="text"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etEmail_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_email"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="textEmailAddress"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etMoNo_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_mono"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="number"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etPassword_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_password"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="textPassword"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/etConfirmPassword_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/signup_conpass"
                android:imeOptions="actionNext"
                android:background="@drawable/et_shadow_signup"
                android:inputType="textPassword"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_login_bg"
                android:text="@string/lg_signup"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>