<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vaishali.preschoolers.com.Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/appname"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_applogo"
                    />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:background="@drawable/et_login_bg"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:hint="@string/lg_email"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:background="@drawable/et_login_bg"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:hint="@string/lg_pass"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/btn_login_bg"
                android:layout_marginTop="20dp"
                android:text="@string/lg_login"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_forgotpass"
            android:layout_width="164dp"
            android:layout_height="30dp"
            android:text="@string/lg_forgotpass"
            android:layout_gravity="end"
            android:textAlignment="textEnd"/>
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="162dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:textAlignment="center"
            android:text="@string/lg_signup"
            tools:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#026085"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
